src/lib/uri/uri_parser.c

#line 1 "src/lib/uri/uri_parser.rl"
/*
 * Copyright 2010-2016, Tarantool AUTHORS, please see AUTHORS file.
 *
 * Redistribution and use in source and binary forms, with or
 * without modification, are permitted provided that the following
 * conditions are met:
 *
 * 1. Redistributions of source code must retain the above
 *    copyright notice, this list of conditions and the
 *    following disclaimer.
 *
 * 2. Redistributions in binary form must reproduce the above
 *    copyright notice, this list of conditions and the following
 *    disclaimer in the documentation and/or other materials
 *    provided with the distribution.
 *
 * THIS SOFTWARE IS PROVIDED BY <COPYRIGHT HOLDER> ``AS IS'' AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
 * TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
 * <COPYRIGHT HOLDER> OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
 * INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
 * BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
 * THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 * SUCH DAMAGE.
 */
#include "uri.h"
#include <trivia/util.h> /* SNPRINT */
#include <string.h>
#include <stdio.h> /* snprintf */
int
uri_parse(struct uri *uri, const char *p)
{
	const char *pe = p + strlen(p);
	const char *eof = pe;
	int cs;
	memset(uri, 0, sizeof(*uri));

	if (p == pe)
		return -1;

	const char *s = NULL, *login = NULL, *scheme = NULL;
	size_t login_len = 0, scheme_len = 0;

	
#line 53 "src/lib/uri/uri_parser.c"
static const int uri_start = 149;
static const int uri_first_final = 149;
static const int uri_error = 0;

static const int uri_en_main = 149;


#line 61 "src/lib/uri/uri_parser.c"
	{
	cs = uri_start;
	}

#line 66 "src/lib/uri/uri_parser.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 149:
	switch( (*p) ) {
		case 33: goto tr156;
		case 35: goto tr157;
		case 37: goto tr158;
		case 46: goto tr159;
		case 47: goto tr160;
		case 59: goto tr156;
		case 61: goto tr156;
		case 63: goto tr162;
		case 64: goto st221;
		case 91: goto st53;
		case 95: goto tr156;
		case 117: goto tr165;
		case 126: goto tr156;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 45 )
			goto tr156;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr164;
		} else if ( (*p) >= 65 )
			goto tr164;
	} else
		goto tr161;
	goto st0;
st0:
cs = 0;
	goto _out;
tr156:
#line 144 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 100 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st150;
st150:
	if ( ++p == pe )
		goto _test_eof150;
case 150:
#line 113 "src/lib/uri/uri_parser.c"
	switch( (*p) ) {
		case 33: goto st150;
		case 35: goto tr166;
		case 37: goto st6;
		case 47: goto tr168;
		case 58: goto tr169;
		case 61: goto st150;
		case 63: goto tr170;
		case 64: goto tr171;
		case 95: goto st150;
		case 126: goto st150;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st150;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st150;
	} else
		goto st150;
	goto st0;
tr157:
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st151;
tr166:
#line 101 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st151;
tr177:
#line 71 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 72 "src/lib/uri/uri_parser.rl"
	{ uri->query = s; uri->query_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st151;
tr179:
#line 72 "src/lib/uri/uri_parser.rl"
	{ uri->query = s; uri->query_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st151;
tr182:
#line 138 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 139 "src/lib/uri/uri_parser.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st151;
tr193:
#line 139 "src/lib/uri/uri_parser.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st151;
tr202:
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st151;
tr220:
#line 108 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;
			   uri->host_hint = 1; }
#line 101 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st151;
tr239:
#line 119 "src/lib/uri/uri_parser.rl"
	{
			/*
			 * This action is also called for path_* terms.
			 * I absolutely have no idea why.
			 */
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
#line 170 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st151;
tr245:
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 119 "src/lib/uri/uri_parser.rl"
	{
			/*
			 * This action is also called for path_* terms.
			 * I absolutely have no idea why.
			 */
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st151;
st151:
	if ( ++p == pe )
		goto _test_eof151;
case 151:
#line 258 "src/lib/uri/uri_parser.c"
	switch( (*p) ) {
		case 33: goto tr172;
		case 37: goto tr173;
		case 61: goto tr172;
		case 95: goto tr172;
		case 124: goto tr172;
		case 126: goto tr172;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr172;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr172;
	} else
		goto tr172;
	goto st0;
tr172:
#line 75 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st152;
st152:
	if ( ++p == pe )
		goto _test_eof152;
case 152:
#line 284 "src/lib/uri/uri_parser.c"
	switch( (*p) ) {
		case 33: goto st152;
		case 37: goto st1;
		case 61: goto st152;
		case 95: goto st152;
		case 124: goto st152;
		case 126: goto st152;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st152;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st152;
	} else
		goto st152;
	goto st0;
tr173:
#line 75 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 310 "src/lib/uri/uri_parser.c"
	switch( (*p) ) {
		case 37: goto st152;
		case 117: goto st2;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st152;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st152;
	} else
		goto st152;
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st3;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st3;
	} else
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st4;
	} else
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st5;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st5;
	} else
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st152;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st152;
	} else
		goto st152;
	goto st0;
tr158:
#line 144 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 100 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 386 "src/lib/uri/uri_parser.c"
	switch( (*p) ) {
		case 37: goto st150;
		case 117: goto st7;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st150;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st150;
	} else
		goto st150;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st8;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st8;
	} else
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st9;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st9;
	} else
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st10;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st10;
	} else
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st150;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st150;
	} else
		goto st150;
	goto st0;
tr168:
#line 101 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st153;
tr184:
#line 138 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 139 "src/lib/uri/uri_parser.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st153;
tr194:
#line 139 "src/lib/uri/uri_parser.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st153;
tr203:
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st153;
tr221:
#line 108 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;
			   uri->host_hint = 1; }
#line 101 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st153;
st153:
	if ( ++p == pe )
		goto _test_eof153;
case 153:
#line 489 "src/lib/uri/uri_parser.c"
	switch( (*p) ) {
		case 33: goto st153;
		case 35: goto tr157;
		case 37: goto st11;
		case 61: goto st153;
		case 63: goto tr162;
		case 95: goto st153;
		case 124: goto st153;
		case 126: goto st153;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st153;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st153;
	} else
		goto st153;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	switch( (*p) ) {
		case 37: goto st153;
		case 117: goto st12;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st153;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st153;
	} else
		goto st153;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st13;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st13;
	} else
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st14;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st14;
	} else
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st15;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st15;
	} else
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st153;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st153;
	} else
		goto st153;
	goto st0;
tr162:
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st154;
tr170:
#line 101 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st154;
tr186:
#line 138 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 139 "src/lib/uri/uri_parser.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st154;
tr196:
#line 139 "src/lib/uri/uri_parser.rl"
	{ uri->service = s; uri->service_len = p - s; }
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st154;
tr204:
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st154;
tr224:
#line 108 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;
			   uri->host_hint = 1; }
#line 101 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;}
#line 171 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st154;
tr240:
#line 119 "src/lib/uri/uri_parser.rl"
	{
			/*
			 * This action is also called for path_* terms.
			 * I absolutely have no idea why.
			 */
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
#line 170 "src/lib/uri/uri_parser.rl"
	{ s = p; }
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st154;
tr247:
#line 175 "src/lib/uri/uri_parser.rl"
	{ uri->path = s; uri->path_len = p - s; }
#line 119 "src/lib/uri/uri_parser.rl"
	{
			/*
			 * This action is also called for path_* terms.
			 * I absolutely have no idea why.
			 */
			if (uri->host_hint != 3) {
				uri->host_hint = 3;
				uri->host = URI_HOST_UNIX;
				uri->host_len = strlen(URI_HOST_UNIX);
				uri->service = s; uri->service_len = p - s;
				/* a workaround for grammar limitations */
				uri->path = NULL;
				uri->path_len = 0;
			};
		}
#line 195 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st154;
st154:
	if ( ++p == pe )
		goto _test_eof154;
case 154:
#line 687 "src/lib/uri/uri_parser.c"
	switch( (*p) ) {
		case 33: goto tr176;
		case 35: goto tr177;
		case 37: goto tr178;
		case 61: goto tr176;
		case 95: goto tr176;
		case 124: goto tr176;
		case 126: goto tr176;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr176;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr176;
	} else
		goto tr176;
	goto st0;
tr176:
#line 71 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st155;
st155:
	if ( ++p == pe )
		goto _test_eof155;
case 155:
#line 714 "src/lib/uri/uri_parser.c"
	switch( (*p) ) {
		case 33: goto st155;
		case 35: goto tr179;
		case 37: goto st16;
		case 61: goto st155;
		case 95: goto st155;
		case 124: goto st155;
		case 126: goto st155;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st155;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st155;
	} else
		goto st155;
	goto st0;
tr178:
#line 71 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 741 "src/lib/uri/uri_parser.c"
	switch( (*p) ) {
		case 37: goto st155;
		case 117: goto st17;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st155;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st155;
	} else
		goto st155;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st18;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st18;
	} else
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st19;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st19;
	} else
		goto st19;
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st20;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st20;
	} else
		goto st20;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st155;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st155;
	} else
		goto st155;
	goto st0;
tr169:
#line 145 "src/lib/uri/uri_parser.rl"
	{ login = s; login_len = p - s; }
#line 101 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;}
	goto st156;
tr261:
#line 145 "src/lib/uri/uri_parser.rl"
	{ login = s; login_len = p - s; }
#line 108 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;
			   uri->host_hint = 1; }
#line 101 "src/lib/uri/uri_parser.rl"
	{ uri->host = s; uri->host_len = p - s;}
	goto st156;
st156:
	if ( ++p == pe )
		goto _test_eof156;
case 156:
#line 826 "src/lib/uri/uri_parser.c"
	switch( (*p) ) {
		case 33: goto tr181;
		case 35: goto tr182;
		case 37: goto tr183;
		case 47: goto tr184;
		case 59: goto tr181;
		case 61: goto tr181;
		case 63: goto tr186;
		case 64: goto tr187;
		case 95: goto tr181;
		case 126: goto tr181;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto tr181;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr188;
		} else if ( (*p) >= 65 )
			goto tr188;
	} else
		goto tr185;
	goto st0;
tr181:
#line 148 "src/lib/uri/uri_parser.rl"
	{ s = p; }
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 859 "src/lib/uri/uri_parser.c"
